pracitce of checkbox

--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
        <label for="Other">Other</label>
        <input type="radio" name="gender" id="Other" value="Other"><br>
        Range: <input type="range"><br>
-       <input type="Submit" value="Submit">
-
+       <input type="Submit" value="Submit"><br>
+      color: <input type="color"><br>
+      <label for="Apple">Apple</label>
+      <input type="checkbox" id="Apple" name="fruit" value="Apple"> <br>
+      <label for="Banana">Banana</label>
+      <input type="checkbox" id="Banana" name="fruit" value="Banana"> <br>
+      <label for="Mango">Mango</label>
+      <input type="checkbox" id="Mango" name="fruit" value="Mango"> 
+     
     </form>
     <table border="1">
         <tr>
@@ -85,6 +92,8 @@
             </ul>
         </li>
     </ul>
+    <img src="road.jpg" alt="road" width="200" height="200">
     
+<img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
 </body>
 </html>
